# sonora

./: .clang-format  .clang-tidy  .gitignore  App.tsx  CMakeLists.txt  README.md  app.config.js  app.json  eas.json  eslint.config.js  package-lock.json  package.json
.github/workflows/: README.md  build.yml  ci.yml  dependency-cache.yml  deploy.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sonora/musicplayer/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
cmake/: CompilerOptions.cmake  FindFFmpeg.cmake  GoogleTestWarnings.cmake  TestConfig.cmake
docs/: CMakeLists.txt
include/sonora/cli/: CommandHandler.h
include/sonora/core/filesystem/: IFileProvider.h
include/sonora/core/playback/: BasicMusicPlayer.h  IMusicPlayer.h
include/sonora/providers/local/: LocalFileProvider.h
ios/: Podfile
ios/sonora/: Info.plist
ios/sonora.xcodeproj/: project.pbxproj
ios/sonora.xcodeproj/xcshareddata/xcschemes/: sonora.xcscheme
ios/sonora.xcworkspace/: contents.xcworkspacedata
src/: CMakeLists.txt  main.cpp
src/cli/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h
src/components/common/: FloatingActionButton.tsx
src/components/navigation/: CustomTabBar.tsx
src/components/player/: MiniPlayerBar.tsx  NowPlayingBar.tsx
src/components/theme/: ThemeToggle.tsx
src/config/: onedrive.ts
src/core/: CMakeLists.txt
src/core/filesystem/: CMakeLists.txt  IFileProvider.h
src/core/playback/: BasicMusicPlayer.cpp  BasicMusicPlayer.h  CMakeLists.txt  IMusicPlayer.h
src/navigation/: AppNavigator.tsx
src/providers/: CMakeLists.txt
src/providers/local/: CMakeLists.txt  LocalFileProvider.cpp
src/screens/: LibraryScreen.tsx  PlayerScreen.tsx  PlayingTabScreen.tsx  PlaylistDetailScreen.tsx  SearchScreen.tsx  SettingsScreen.tsx  StorageProvidersScreen.tsx
src/services/player/: PlayerService.ts
src/services/storage/: LocalStorageProvider.ts  OneDriveStorageProvider.ts  StorageManager.ts  StorageProvider.ts
src/store/: index.ts  playerStore.ts
src/theme/: ThemeContext.tsx
src/types/: index.ts  musicInfo.d.ts
src/utils/: artworkHelper.ts  debugHelper.ts  formatters.ts  logger.ts
tests/: CMakeLists.txt
tests/integration/: BasicIntegrationTest.cpp  CMakeLists.txt
tests/unit/: CMakeLists.txt  FileProviderTest.cpp  MusicPlayerTest.cpp
